--- a/borderlines.css
+++ b/borderlines.css
@@ -93,6 +93,15 @@
          margin-top: 20px;
          padding-left: 20px;
          padding-top: 20px
+         font-size: 10px;
+         color: #cccccc;
+         line-break: anywhere;
+         word-break: normal;
+         overflow: hidden;
+         white-space: nowrap;
+         text-overflow: ellipsis;
+         font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+         font-weight: 100
          }
          .about {
          width: 1000px;
@@ -112,3 +121,78 @@
          height: 40px;
          padding: 5px;
          }
+
+
+         @media only screen and (max-width: 600px) {
+         ul {
+         height: 200%;
+         display: flex;
+         flex-direction: column;
+         }
+         .nav-div {
+         display: flex;
+         justify-content: center;
+         margin: auto;
+         }
+         .nav-bar {
+         padding: 0px;
+         }
+         .nav-container {
+         display: flex;
+         flex-direction: column;
+         margin-bottom: 350px;
+         }
+         .nav-bar-link {
+         display: flex;
+         justify-content: center;
+         background-color: #c2c2c2;
+         border: 1px solid #4f4f4f;
+         margin-top: 20px;
+         }
+         .main-header-title {
+         display: flex;
+         padding-left: 0px;
+         }
+         .top-image, .borderlines-lyrics {
+         max-width: 600px;
+         }
+         .spotify {
+         max-width: 500px;
+         }
+         .quote {
+         max-width: 400px;
+         margin: auto;
+         }
+         .box {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+         }
+         .card {
+         width: 100%;
+         height: 200px;
+         margin-top: 0px;
+         }
+         .description, .about {
+            max-width: 450px;
+            text-align: center;
+            padding-top: 35px;
+            padding-right: 0px;
+            margin: auto;
+         }
+         .soundcloud {
+            padding-right: 20px;
+            max-width: 600px;
+         }
+         .video {
+            width: 600px;
+            height: 400px;
+            padding-right: 20px;
+         }
+         .video-line {
+            margin-top: 200px;
+         }
+         }
+         @media only screen and (min-width: 601px) {
+         }
+         }  
