--- a/borderlines.css
+++ b/borderlines.css
@@ -13,6 +13,12 @@ text-align: center;
 max-width: 1000px;
 text-align: center;
 margin-top: 20px;
+margin-bottom: 40px;
+ animation: fadeIn linear 1s;
+  -webkit-animation: fadeIn linear 1s;
+  -moz-animation: fadeIn linear 1s;
+  -o-animation: fadeIn linear 1s;
+  -ms-animation: fadeIn linear 1s;
 }
 a {
 text-decoration: none;
@@ -37,6 +43,35 @@ color: #4f4f4f;
 font-size: 18px;
 letter-spacing: 2px;
 padding: 20px;
+ animation: fadeIn linear 1s;
+  -webkit-animation: fadeIn linear 1s;
+  -moz-animation: fadeIn linear 1s;
+  -o-animation: fadeIn linear 1s;
+  -ms-animation: fadeIn linear 1s;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
 .main-header-title {
 text-align: left;
@@ -47,12 +82,39 @@ font-weight: normal;
 padding-top: 20px;
 padding-left: 50px;
 letter-spacing: 5px;
+ animation: fadeIn linear 1s;
+  -webkit-animation: fadeIn linear 1s;
+  -moz-animation: fadeIn linear 1s;
+  -o-animation: fadeIn linear 1s;
+  -ms-animation: fadeIn linear 1s;
 }
 a {
 color: inherit;
 }
-.spotify {
-margin-top: 30px;
+.listen-now {
+font-size: 25px;
+color: #4f4f4f;
+text-transform: uppercase;
+font-weight: normal;
+letter-spacing: 5px;
+width: 400px;
+margin-top: 20px;
+margin: auto;
+}
+.listen-button {
+border: 1px solid #4f4f4f;
+font-family: inherit;
+height: 100%;
+font-size: 20px;
+background: none;
+letter-spacing: 2px;
+text-align: center;
+line-height: 68px;
+padding: 25px;
+transition-duration: 0.4s;
+}
+.listen-button:hover {
+background-color: #dedede;
 }
 hr {
 width: 400px;
@@ -117,9 +179,45 @@ text-align: center;
 margin-bottom: 60px;
 border: 1px solid black;
 }
+.mailing-list {
+margin-bottom: 15px;
+}
+input, label {
+font-family: "Raleway", sans-serif !important;
+letter-spacing: 2px;
+}
+label {
+font-size: 18px;
+}
+#subscribe {
+font-family: inherit !important;
+letter-spacing: 2px;
+color: #878787;
+background-color: white;
+border: 1px solid #4f4f4f;
+text-align: center;
+transition-duration: 0.4s;
+}
+#subscribe:hover {
+background-color: #dedede;
+}
+#email {
+	margin-right: 20px;
+}
+#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+#hidden-input {position: absolute; left: -5000px;}
 .footer {
 height: 40px;
 padding: 5px;
+letter-spacing: 5px;
+}
+.email-input {
+	margin: 20px 0;
+}
+.footer {
+height: 40px;
+padding: 5px;
+letter-spacing: 5px;
 }
 @media only screen and (max-width: 600px) {
 ul {
@@ -138,12 +236,12 @@ padding: 0px;
 .nav-container {
 display: flex;
 flex-direction: column;
-margin-bottom: 350px;
+margin-bottom: 280px;
 }
 .nav-bar-link {
 display: flex;
 justify-content: center;
-background-color: #c2c2c2;
+background-color: #dedede;
 border: 1px solid #4f4f4f;
 margin-top: 20px;
 }
@@ -189,8 +287,5 @@ padding-right: 20px;
 }
 .video-line {
 margin-top: 200px;
-}
-}
-@media only screen and (min-width: 601px) {
 }
 }
