--- a/homepage.css
+++ b/homepage.css
@@ -35,35 +35,31 @@ color: #4f4f4f;
 font-size: 18px;
 letter-spacing: 2px;
 padding: 20px;
- animation: fadeIn linear 1s;
-  -webkit-animation: fadeIn linear 1s;
-  -moz-animation: fadeIn linear 1s;
-  -o-animation: fadeIn linear 1s;
-  -ms-animation: fadeIn linear 1s;
+animation: fadeIn linear 1s;
+-webkit-animation: fadeIn linear 1s;
+-moz-animation: fadeIn linear 1s;
+-o-animation: fadeIn linear 1s;
+-ms-animation: fadeIn linear 1s;
 }
 @keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+0% {opacity:0;}
+100% {opacity:1;}
 }
-
 @-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+0% {opacity:0;}
+100% {opacity:1;}
 }
-
 @-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+0% {opacity:0;}
+100% {opacity:1;}
 }
-
 @-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+0% {opacity:0;}
+100% {opacity:1;}
 }
-
 @-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+0% {opacity:0;}
+100% {opacity:1;}
 }
 .nav-background {
 background: url("imgs/soak-cover-photo.jpg") top;
@@ -82,11 +78,11 @@ font-weight: normal;
 padding-top: 20px;
 padding-left: 50px;
 letter-spacing: 5px;
- animation: fadeIn linear 1s;
-  -webkit-animation: fadeIn linear 1s;
-  -moz-animation: fadeIn linear 1s;
-  -o-animation: fadeIn linear 1s;
-  -ms-animation: fadeIn linear 1s;
+animation: fadeIn linear 1s;
+-webkit-animation: fadeIn linear 1s;
+-moz-animation: fadeIn linear 1s;
+-o-animation: fadeIn linear 1s;
+-ms-animation: fadeIn linear 1s;
 }
 a {
 color: inherit;
@@ -111,26 +107,25 @@ background: none;
 letter-spacing: 2px;
 text-align: center;
 line-height: 68px;
-  animation-duration: 1s;
-  animation-name: slidein;
+animation-duration: 1s;
+animation-name: slidein;
 }
-
 @keyframes slidein {
-  from {
-    margin-left: 3%;
-    width: 400px;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 400px;
-  }
+from {
+margin-left: 3%;
+width: 400px;
+}
+to {
+margin-left: 0%;
+width: 400px;
+}
 }
 .listen-button {
 transition-duration: 0.4s;
 }
 .listen-button:hover {
 background-color: white;
+cursor: pointer;
 }
 .intro {
 width: 50%;
@@ -164,9 +159,10 @@ transition-duration: 0.4s;
 }
 #subscribe:hover {
 background-color: #dedede;
+cursor: pointer;
 }
 #email {
-	margin-right: 20px;
+margin-right: 20px;
 }
 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
 #hidden-input {position: absolute; left: -5000px;}
@@ -176,7 +172,7 @@ padding: 5px;
 letter-spacing: 5px;
 }
 .email-input {
-	margin: 20px 0;
+margin: 20px 0;
 }
 @media only screen and (max-width: 600px) {
 ul {
