--- a/borderlines.css
+++ b/borderlines.css
@@ -49,6 +49,40 @@ animation: fadeIn linear 1s;
 -o-animation: fadeIn linear 1s;
 -ms-animation: fadeIn linear 1s;
 }
+.dropdown-content {
+display: none;
+position: absolute;
+min-width: 160px;
+z-index: 1;
+}
+.dropdown-content a {
+float: none;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+text-align: left;
+color: #4f4f4f;
+letter-spacing: 2px;
+position: relative;
+left: 4px;
+top: 7px;
+}
+.dropdown-content a:hover {
+color: #999999;
+}
+.contact-nav a:hover {
+color: #999999;
+}
+.dropdown-link:hover .dropdown-content {
+display: block;
+}
+.dropdown-link:hover {
+animation: fadeIn linear 0.5s;
+-webkit-animation: fadeIn linear 0.5s;
+-moz-animation: fadeIn linear 0.5s;
+-o-animation: fadeIn linear 0.5s;
+-ms-animation: fadeIn linear 0.5s;
+}
 @keyframes fadeIn {
 0% {opacity:0;}
 100% {opacity:1;}
@@ -194,7 +228,7 @@ font-family: inherit !important;
 letter-spacing: 2px;
 color: #878787;
 background-color: white;
-border: 1px solid #4f4f4f;
+border: 0.5px solid #4f4f4f;
 text-align: center;
 transition-duration: 0.4s;
 }
@@ -224,34 +258,41 @@ letter-spacing: 5px;
 ul {
 height: 200%;
 display: flex;
-flex-direction: column;
+flex-direction: row;
 }
 .nav-div {
 display: flex;
 justify-content: center;
 margin: auto;
+width: 100%;
+height: 60px;
 }
 .nav-bar {
 padding: 0px;
 }
+.nav-bar-link {
+padding-bottom: 0px;
+}
 .nav-container {
 display: flex;
 flex-direction: column;
-margin-bottom: 280px;
+margin-bottom: 40px;
 }
 .nav-bar-link {
 display: flex;
 justify-content: center;
-background-color: #dedede;
-border: 1px solid #4f4f4f;
 margin-top: 20px;
+}
+.dropdown-content {
+background: white;
+height: 228px;
 }
 .main-header-title {
 display: flex;
 padding-left: 0px;
 }
 .top-image, .lyrics {
-max-width: 600px;
+max-width: 100%;
 }
 .spotify {
 max-width: 500px;
